--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,3 +19,43 @@ $neutral-white: hsl(0, 0%, 100%);
 /* Typography */
 $font-family-1: 'Montserrat', sans-serif;
 $font-family-2: 'Fraunces', serif;
+
+@mixin text-preset-1 {
+    font-family:  $font-family-2;
+    font-size: 2rem; /* 32px */
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: 0;
+}
+
+@mixin text-preset-2 {
+    font-family:  $font-family-1;
+    font-size: 0.875rem; /* 14px */
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: 0;
+}
+
+@mixin text-preset-3 {
+    font-family:  $font-family-1;
+    font-size: 0.875rem; /* 14px */
+    font-weight: 500;
+    line-height: 160%;
+    letter-spacing: 0;
+}
+
+@mixin text-preset-4 {
+    font-family:  $font-family-1;
+    font-size: 0.75rem; /* 12px */
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: 0.313rem;
+}
+
+@mixin text-preset-5 {
+    font-family:  $font-family-1;
+    font-size: 0.813rem; /* 13px */
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: 0;
+}
