--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -50,6 +50,7 @@ $font-family-2: 'Fraunces', serif;
     font-weight: 500;
     line-height: 120%;
     letter-spacing: 0.313rem;
+    text-transform: uppercase;
 }
 
 @mixin text-preset-5 {
