--- a/scss/style.css
+++ b/scss/style.css
@@ -9,4 +9,55 @@
 
 body {
   font-size: 0.875rem; /* 14px */
+  background: hsl(30, 38%, 92%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.product-preview-card {
+  display: flex;
+  flex-direction: row;
+}
+
+.product-image {
+  max-width: 18.75rem; /* 300px */
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.product-details {
+  padding: 2rem;
+  background: hsl(0, 0%, 100%);
+  max-width: 18.75rem; /* 300px */
+  border-radius: 0 0.5rem 0.5rem 0;
+}
+
+.product-type {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.75rem; /* 12px */
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0.313rem;
+  text-transform: uppercase;
+  color: hsl(228, 12%, 48%);
+}
+
+h1 {
+  font-family: "Fraunces", serif;
+  font-size: 2rem; /* 32px */
+  font-weight: 700;
+  line-height: 110%;
+  letter-spacing: 0;
+  margin: 1.5rem 0 1.5rem;
+  color: hsl(212, 21%, 14%);
+}
+
+.product-description {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.875rem; /* 14px */
+  font-weight: 500;
+  line-height: 160%;
+  letter-spacing: 0;
+  color: hsl(228, 12%, 48%);
 }/*# sourceMappingURL=style.css.map */
