--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,4 +9,42 @@
 
 body {
     font-size: 0.875rem; /* 14px */
+    background: $neutral-cream;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.product-preview-card {
+    display: flex;
+    flex-direction: row;
+}
+
+.product-image {
+    max-width: 18.75rem; /* 300px */
+    border-radius: $spacing-100 0 0 $spacing-100;
+}
+
+.product-details {
+    padding: $spacing-400;
+    background: $neutral-white;
+    max-width: 18.75rem; /* 300px */
+    border-radius: 0 $spacing-100 $spacing-100 0;
+}
+
+.product-type {
+    @include text-preset-4;
+    color: $neutral-grey;
+}
+
+h1 {
+    @include text-preset-1;
+    margin: $spacing-300 0 $spacing-300;
+    color: $neutral-black;
+}
+
+.product-description {
+    @include text-preset-3;
+    color: $neutral-grey;
 }
