--- a/scss/style.css
+++ b/scss/style.css
@@ -20,20 +20,17 @@ body {
   display: flex;
   flex-direction: row;
 }
-
-.product-image {
+.product-preview-card .product-image {
   max-width: 18.75rem; /* 300px */
   border-radius: 0.5rem 0 0 0.5rem;
 }
-
-.product-details {
+.product-preview-card .product-details {
   padding: 2rem;
   background: hsl(0, 0%, 100%);
   max-width: 18.75rem; /* 300px */
   border-radius: 0 0.5rem 0.5rem 0;
 }
-
-.product-type {
+.product-preview-card .product-details .product-type {
   font-family: "Montserrat", sans-serif;
   font-size: 0.75rem; /* 12px */
   font-weight: 500;
@@ -42,8 +39,7 @@ body {
   text-transform: uppercase;
   color: hsl(228, 12%, 48%);
 }
-
-h1 {
+.product-preview-card .product-details h1 {
   font-family: "Fraunces", serif;
   font-size: 2rem; /* 32px */
   font-weight: 700;
@@ -52,12 +48,34 @@ h1 {
   margin: 1.5rem 0 1.5rem;
   color: hsl(212, 21%, 14%);
 }
-
-.product-description {
+.product-preview-card .product-details .product-description {
   font-family: "Montserrat", sans-serif;
   font-size: 0.875rem; /* 14px */
   font-weight: 500;
   line-height: 160%;
   letter-spacing: 0;
   color: hsl(228, 12%, 48%);
+}
+.product-preview-card .product-price-container {
+  display: flex;
+  margin: 2rem 0 2rem;
+}
+.product-preview-card .product-price-container .product-price {
+  font-family: "Fraunces", serif;
+  font-size: 2rem; /* 32px */
+  font-weight: 700;
+  line-height: 110%;
+  letter-spacing: 0;
+  color: hsl(158, 36%, 37%);
+}
+.product-preview-card .product-price-container .product-price-old {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.813rem; /* 13px */
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0;
+  color: hsl(228, 12%, 48%);
+  margin-left: 1rem;
+  text-decoration: line-through;
+  align-self: center;
 }/*# sourceMappingURL=style.css.map */
