--- a/scss/style.css
+++ b/scss/style.css
@@ -97,4 +97,7 @@ body {
   font-weight: 700;
   line-height: 110%;
   letter-spacing: 0;
+}
+.product-preview-card .add-to-cart-button:hover {
+  background: hsl(158, 42%, 18%);
 }/*# sourceMappingURL=style.css.map */
